--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "node --loader ts-node/esm index.ts"
   },
   "devDependencies": {
+    "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
