--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
+        "@types/eslint__js": "^8.42.3",
         "eslint": "^9.39.2",
+        "eslint-config": "^0.3.0",
+        "eslint-plugin-prettier": "^5.5.5",
         "globals": "^17.2.0",
         "prettier": "^3.8.1",
         "ts-node": "^10.9.2",
